[feat]: Interviewer Sort Reflection multiplication