@@ -3,7 +3,7 @@ package com.econovation.recruit.api.interviewer.service;
 import com.econovation.recruit.api.config.security.SecurityUtils;
 import com.econovation.recruit.api.interviewer.helper.IdpHelper;
 import com.econovation.recruit.api.interviewer.usecase.InterviewerUseCase;
-import com.econovation.recruitcommon.jwt.JwtTokenProvider;
+import com.econovation.recruit.utils.sort.SortHelper;
 import com.econovation.recruitdomain.domains.dto.InterviewerCreateDto;
 import com.econovation.recruitdomain.domains.dto.InterviewerResponseDto;
 import com.econovation.recruitdomain.domains.interviewer.domain.Interviewer;
@@ -12,7 +12,6 @@ import com.econovation.recruitdomain.out.InterviewerLoadPort;
 import com.econovation.recruitdomain.out.InterviewerRecordPort;
 import com.econovation.recruitinfrastructure.idp.dto.InterviewerResponse;
 import java.util.List;
-import java.util.stream.Collectors;
 import lombok.RequiredArgsConstructor;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
@@ -23,13 +22,13 @@ public class InterviewersService implements InterviewerUseCase {
     private final InterviewerLoadPort interviewerLoadPort;
     private final InterviewerRecordPort interviewerRecordPort;
     private final IdpHelper idpHelper;
-    private final JwtTokenProvider jwtTokenProvider;
+    private final SortHelper<Interviewer> interviewerSortHelper;
 
     @Override
     public List<Interviewer> createInterviewers(List<Long> idpIds) {
         List<InterviewerResponse> interviewers = idpHelper.createInterviewers(idpIds);
         return interviewerRecordPort.saveAll(
-                interviewers.stream().map(InterviewerCreateDto::from).collect(Collectors.toList()));
+                interviewers.stream().map(InterviewerCreateDto::from).toList());
     }
 
     @Override
@@ -51,14 +50,21 @@ public class InterviewersService implements InterviewerUseCase {
     public void createInterviewersByName(List<String> names) {
         List<InterviewerResponse> interviewers = idpHelper.loadByNames(names);
         interviewerRecordPort.saveAll(
-                interviewers.stream().map(InterviewerCreateDto::from).collect(Collectors.toList()));
+                interviewers.stream().map(InterviewerCreateDto::from).toList());
     }
 
     @Override
     @Transactional(readOnly = true)
     public List<InterviewerResponseDto> findAll() {
         List<Interviewer> interviewers = interviewerLoadPort.findAll();
-        return interviewers.stream().map(InterviewerResponseDto::from).collect(Collectors.toList());
+        return interviewers.stream().map(InterviewerResponseDto::from).toList();
+    }
+
+    @Override
+    public List<InterviewerResponseDto> findAll(String sortType) {
+        List<Interviewer> interviewers = interviewerLoadPort.findAll();
+        interviewerSortHelper.sort(interviewers, sortType);
+        return interviewers.stream().map(InterviewerResponseDto::from).toList();
     }
 
     @Override
